added open-source code link

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
         </div>
       </div>
     </div>
+    <p class="signature">
+      <a href="https://github.com/raemeenen/meenen-weather-app" target="_blank"
+        >Open-source code</a
+      >
+      by Rachel Meenen
+    </p>
     <script src="src/index.js"></script>
   </body>
 </html>
